--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,25 @@ body {
   padding: 0px 15px;
 }
 
+@media (max-width: 1140px) {
+  [class*="__container"] [class*="__container"] {
+    max-width: 970px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  [class*="__container"] [class*="__container"] {
+    max-width: 750px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  [class*="__container"] [class*="__container"] {
+    max-width: none;
+    padding: 0 10px;
+  }
+}
+
 /* ------------------------------ */
 .header {
   position: absolute;
@@ -508,7 +527,7 @@ body {
 }
 
 .works__top:not(:last-child) {
-  margin-bottom: 30px;
+  margin-bottom: 59px;
 }
 
 .works__bottom {
@@ -541,7 +560,6 @@ body {
   display: block;
   position: absolute;
   bottom: 0;
-  left: 46.9%;
   width: 60px;
   height: 2px;
   background-color: #34C759;
@@ -568,7 +586,6 @@ body {
   left: 0;
   width: 100%;
   overflow-wrap: break-word;
-  font-weight: 400;
   font-size: 36px;
   line-height: 2.5;
   text-align: center;
@@ -589,6 +606,13 @@ body {
           flex: 1 0 25%;
   min-width: 255px;
   padding: 0px 15px;
+}
+
+@media (max-width: 991px) {
+  .item-bottom {
+    padding-left: calc(5px + (15 - 5) * ((100vw - 320px) / (991 - 320)));
+    padding-right: calc(5px + (15 - 5) * ((100vw - 320px) / (991 - 320)));
+  }
 }
 
 .item-bottom__body {
@@ -688,6 +712,13 @@ body {
           flex: 1 1 33.333%;
   padding: 0px 15px;
   min-width: 290px;
+}
+
+@media (max-width: 991px) {
+  .dishes__card {
+    padding-left: calc(5px + (15 - 5) * ((100vw - 320px) / (991 - 320)));
+    padding-right: calc(5px + (15 - 5) * ((100vw - 320px) / (991 - 320)));
+  }
 }
 
 .dishes-item {
@@ -908,16 +939,32 @@ body {
           flex: 1 1 50%;
 }
 
+@media (max-width: 991px) {
+  .recipes__block {
+    padding-left: calc(5px + (15 - 5) * ((100vw - 320px) / (991 - 320)));
+    padding-right: calc(5px + (15 - 5) * ((100vw - 320px) / (991 - 320)));
+  }
+}
+
 .recipes__main {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
   height: 100%;
-  min-height: 400px;
+  min-width: 400px;
   position: relative;
   padding: 60px 91px 60px 90px;
   border-radius: 6px;
   background: url(../img/recipeс/img/mangal.png) center/cover no-repeat;
+}
+
+@media (max-width: 768px) {
+  .recipes__main {
+    padding-top: calc(15px + (60 - 15) * ((100vw - 320px) / (750 - 320)));
+    padding-right: calc(10px + (91 - 10) * ((100vw - 320px) / (750 - 320)));
+    padding-bottom: calc(10px + (60 - 10) * ((100vw - 320px) / (750 - 320)));
+    padding-left: calc(10px + (90 - 10) * ((100vw - 320px) / (750 - 320)));
+  }
 }
 
 .recipes__main-point {
